# energy-forecast

./: LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: daily_forecast.yml
energy-forecast/: data_loader.py  forecast.py  forecast_2024_09_26.csv  forecast_2024_10_01.csv  forecast_2024_10_02.csv  main.py
energy_forecast/: main.py
foracast_data/: forecast_2024_09_30.csv
forecast_data/: forecast_2024_10_05.csv  forecast_2024_10_06.csv  forecast_2024_10_07.csv  forecast_2024_10_08.csv  forecast_2024_10_09.csv  forecast_2024_10_10.csv  forecast_2024_10_11.csv  forecast_2024_10_12.csv  forecast_2024_10_13.csv  forecast_2024_10_14.csv  forecast_2024_10_15.csv  forecast_2024_10_16.csv  forecast_2024_10_17.csv  forecast_2024_10_18.csv  forecast_2024_10_19.csv  forecast_2024_10_20.csv  forecast_2024_10_21.csv  forecast_2024_10_22.csv  forecast_2024_10_23.csv  forecast_2024_10_24.csv  forecast_2024_10_25.csv  forecast_2024_10_26.csv  forecast_2024_10_27.csv  forecast_2024_10_28.csv  forecast_2024_10_29.csv  forecast_2024_10_30.csv  forecast_2024_10_31.csv  forecast_2024_11_01.csv  forecast_2024_11_02.csv  forecast_2024_11_05.csv  forecast_2024_11_06.csv  forecast_2024_11_07.csv  forecast_2024_11_08.csv  forecast_2024_11_09.csv  forecast_2024_11_10.csv  forecast_2024_11_11.csv  forecast_2024_11_12.csv  forecast_2024_11_13.csv  forecast_2024_11_14.csv  forecast_2024_11_15.csv  (+517 more)
models/: solar_energy_production_model.keras
notebooks/: forecast_model.ipynb
