[tool.poetry]
name = "energy-forecast"
version = "0.1.0"
description = ""
authors = ["idlir-shkurti <idlir.shkurti@markt-pilot.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
